Fixed video background on Firefox

--- a/css/main.css
+++ b/css/main.css
@@ -262,6 +262,7 @@ a.anchor {
     transition: 0.2s ease;
     -webkit-border-radius: 0 !important;
     border-radius: 0 !important;
+    background: -moz-linear-gradient(top, #2c2c2c, #2c2c2c) !important;
     background-color: #323232;
     margin-bottom: 0;
 }
@@ -272,6 +273,7 @@ a.anchor {
     left: 0;
     width: 100%;
     padding-top: 5px;
+    background: -moz-linear-gradient(top, #fff, #fff) !important;
     background-color: #ffffff;
     -webkit-box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.23);
     box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.23);
@@ -2197,6 +2199,7 @@ h3.title {
 
 .header-video {
     width: 100%;
+    background: -moz-linear-gradient(top, #2c2c2c, #2c2c2c) !important;
     background: #323232;
     margin: 0;
     display: inline-block;
@@ -2208,6 +2211,7 @@ video {
 }
 
 .header-block-top {
+    background: -moz-linear-gradient(top, #2c2c2c, #2c2c2c) !important;
     background: #323232;
     color: #fff;
     text-align: center;
@@ -2225,6 +2229,7 @@ video {
 
 .header-block-bottom {
     width: 100%;
+    background: -moz-linear-gradient(top, #2c2c2c, #2c2c2c) !important;
     background: #323232;
     text-align: center;
     margin-top: -10px;
